# Thoth

./: .env.example  package-lock.json  package.json
Thoth/prisma/migrations/20241205024926_update_schema_enums/: migration.sql
Thoth/prisma/migrations/20241205052950_add_course_forks/: migration.sql
Thoth/prisma/migrations/20241207020347_add_youtube_videos/: migration.sql
Thoth/src/: middleware.ts
Thoth/src/app/: loading.tsx  page.tsx
Thoth/src/app/actions/: auth.ts  generate-ai-response.ts
Thoth/src/components/auth/: IntertwiningArcs.tsx  SignOutButton.tsx
Thoth/src/components/global/: logo.tsx
Thoth/src/helpers/: LanguageDetector.ts
Thoth/src/hooks/: use-community-courses.ts  use-course-messages.ts  use-debounce.ts
Thoth/src/lib/: fallbackRepos.ts
Thoth/src/types/: course.ts  preferences.ts
populate_db_atlas/: .env.example  main.py
src/: middleware.ts
src/app/actions/: generate-suggestion.ts  preferences.ts
src/app/api/analyze-preferences/: route.ts
src/hooks/: use-user-courses.ts
thoth/: package-lock.json  package.json  tree.txt
thoth/populate_db_atlas/: pyproject.toml
thoth/prisma/: schema.prisma
thoth/src/: middleware.ts
thoth/src/app/: layout.tsx  not-found.tsx
thoth/src/app/actions/: auth.ts  generate-ai-response.ts  generate-suggestion.ts  onboarding.ts  preferences.ts
thoth/src/components/global/: ProfileDropdown.tsx
thoth/src/components/providers/: AppProviders.tsx
thoth/src/helpers/: GithubRepoLoader.ts  LanguageDetector.ts
thoth/src/lib/: auth.ts  fallbackRepos.ts  prisma.ts
(+45 files in other folders)
